--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,8 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
         pip install -r requirements.txt
-    - name: Analysing the code with pylint
+    - name: Run code
       run: |
         python main.py
