--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,3 +18,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Run
+        run: |
+          python main.py
